# nomadcoder-challenge

./: README.md  pyproject.toml
config/: settings.py  urls.py
tweets/: admin.py  models.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_like_tweet.py
tweets/templates/: tweets.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
