[tool.poetry]
name = "nomadcoder-challenge"
version = "0.1.0"
description = ""
authors = ["prograsshopper <tjalwled12@gmail.com>"]
readme = "README.md"
packages = [{include = "nomadcoder_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
